[package]
name = "example-unshare-ipc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "umq"
path = "src/main.rs"

[dependencies]
posix_mq = "3771.0.0"
clap = { version = "4.5.26", features = ["derive"] }
nix = { version = "0.29.0", features = ["sched", "process"] }
anyhow = "1"
ctrlc = "3.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5.15"
caps = "0.5.5"
tokio = {version = "1", features = ["full"]}
